<resources>
    <string name="app_name">Parking Attendant</string>
    <string name="text_parking_register">Registrar</string>
    <string name="text_parking_payment">Pagar</string>
    <string name="text_parking_title">Parking</string>
    <string name="text_register_vehicle">Registrar vehículo</string>
    <string name="text_register_car">Carro</string>
    <string name="text_register_motorcycle">Motocicleta</string>
    <string name="text_register_hint_plate">Placa</string>
    <string name="text_payment_title">Realizar pago</string>
    <string name="text_payment_button">Calcular pago</string>
    <string name="text_payment_total_payment">Total a pagar:</string>
    <string name="text_register_motorcycle_cylinder_capacity">Cilindraje</string>
    <string name="text_message_general_exception">Ocurrió un error, por favor inténtelo de nuevo más tarde</string>
    <string name="text_message_register_success">Vehículo registrado exitosamente</string>
    <string name="text_do_payment">PAGAR</string>
    <string name="text_message_car_not_found">No se encontró un registro del carro con esa placa</string>
    <string name="text_message_motorcycle_not_found">No se encontró un registro de la moto con esa placa</string>
    <string name="text_message_payment_success">Pago realizado exitosamente</string>
    <string name="text_message_empty_cylinder_capacity">El cilindraje no puede estar en blanco!</string>
    <string name="text_message_total_service">Total a pagar %1$s</string>
</resources>